最优模型实例、实例上报